<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_addbutton"
        android:orderInCategory="100"
        android:title="Add"
        app:showAsAction="always"
        android:icon="@drawable/addbutton"/>
    <item
        android:id="@+id/action_editbutton"
        android:orderInCategory="99"
        android:title="Edit"
        app:showAsAction="always"
        android:icon="@drawable/editbutton"/>

</menu>
