...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.cards.flash.testez.MainActivity$EditCardFragment"
    android:background="#d9d8d8"
    android:id="@+id/mainRelLayout">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="0dp"
        android:padding="-5dp"
        android:showDividers="none"
...
            android:layout_height="match_parent"
            android:text="Practice"
            android:textColor="#ffffff"
            android:background="#00ffffff" />
        <Button
            style="@style/DefaultButton"
            android:id="@+id/invite_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="Invite"
            android:textColor="#ffffff"
            android:background="#00ffffff" />
...
