<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:id="@+id/shareFrameLayout">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/share_button"
        android:layout_gravity="right|center_vertical"
        android:padding="5dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/name"
            android:textColor="#a000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Small Text"
            android:id="@+id/email"
            android:textColor="#9000" />
    </LinearLayout>
</FrameLayout>